--- a/assets/index.html
+++ b/assets/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Three JS</title>
-    <script src="http://localhost:8080/webpack-dev-server.js"></script>
+<!--    <script src="http://localhost:8080/webpack-dev-server.js"></script>-->
   </head>
   <body>
-    <script src="http://localhost:8080/bundle.js"></script>
+    <script src="http://localhost:9000/bundle.js"></script>
   </body>
 </html>
