fix version change bugs

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Three JS</title>
+    <title>Cat Fighter</title>
 <!--    <script src="http://localhost:8080/webpack-dev-server.js"></script>-->
   </head>
   <body>
